# markdown-automatic-translation

./: .gitignore  AGENTS.md  CNAME  README.md  _config.yml  pyproject.toml
.github/workflows/: jekyll-gh-pages.yml  pypi-release.yml  quality.yml  test.yml
data/test-markdown/: .mdxlate.hashes.json
data/test-markdown/de/en/: index.md  test.md
data/test-markdown/de/en/nested/: nested_md_file.md
data/test-markdown/en/: index.md  test.md
data/test-markdown/en/nested/: nested_md_file.md
data/test-markdown/fr/en/: index.md  test.md
data/test-markdown/fr/en/nested/: nested_md_file.md
docs/: README.md  _config.yml  caching.md  cli.md  custom-prompt.md  development.md  error-handling.md  faq.md  index.md  programmatic.md
docs/integrations/: jekyll.md
src/: main.py
src/mdxlate/: cache.py  cli.py  client.py  start_translation.py  translator.py
src/mdxlate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  test_cache.py  test_cli.py  test_client.py  test_mdxlate.py
