[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdxlate"
version = "1.0.0"
description = "Markdown translations with editable prompt"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "openai>=1.40",
    "tenacity>=8.2",
    "pytest>=8.4.2",
]

[project.scripts]
mdx = "mdxlate.cli:app"

[tool.setuptools.package-data]
mdxlate = ["resources/translation_instruction.txt"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in argument defaults (required for Typer CLI)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
check_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["tenacity.*", "openai.*", "typer.*"]
ignore_missing_imports = true

